# perceptron

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  bind.sh  install_packages_py.sh  readme.md  test_perceptron.py  wrap.cpp
scripts/: install.sh  rebuild_cpp.sh  requirements.txt
src/: CMakeLists.txt  layer.cpp  layer.h  main.cpp  rebuild_all.sh  wrap.cpp
